--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -93,7 +93,7 @@ body {
 .esquema_frame {
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
     border-radius: 50px;
-    width: 400px;
+    max-width: 400px;
     background-color: rgb(235, 235, 235);
     border: 10px;
     margin: 10px;
@@ -125,10 +125,12 @@ body {
 .seccion_contacto form {
     width: 80%;
     padding-top: 50px;
+    padding-bottom: 70px;
 }
 
 .seccion_contacto img {
     width: 100%;
+    height: auto;
 }
 
 /* Footer */
@@ -148,6 +150,7 @@ body {
     .subcontenedor_main {
         grid-template-columns: 1fr;
         text-align: center;
+       
     }
 
     .subcontenedor_main_info h1 {
@@ -156,10 +159,25 @@ body {
 
     .subcontenedor_main_info p {
         width: 100%;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    .subcontenedor_main_info {
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .seccion_contacto {
         grid-template-columns: 1fr;
+    }
+
+    .seccion_contacto form {
+        padding-bottom: 70px;
+        padding-top: 70px;
     }
 }
 
@@ -190,6 +208,11 @@ body {
     .contenedor_frames {
         flex-direction: column;
         align-items: center;
+
+    }
+
+    .esquema_frame {
+        width: 350px;
     }
 
     .seccion_contacto {
