--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -146,7 +146,7 @@ body {
 
 
 
-@media screen and (min-width: 768px) and (max-width: 991px) {
+@media screen and (min-width: 800px) and (max-width: 991px) {
     .subcontenedor_main {
         grid-template-columns: 1fr;
         text-align: center;
@@ -182,7 +182,7 @@ body {
 }
 
 /* Tamaño para móviles */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 799px) {
     .subcontenedor_main {
         grid-template-columns: 1fr;
         text-align: center;
@@ -194,6 +194,8 @@ body {
 
     .subcontenedor_main_info p {
         width: 100%;
+        padding-left: 30px;
+        padding-right: 30px;
     }
 
     .subcontenedor_main_info ul {
