--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,11 +1,14 @@
-
-
- 
-/* Tamaño para desktops */
-@media screen and (min-width: 100%) {}
+/* Global Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 /* Main */
@@ -15,11 +18,16 @@ body {
     padding-bottom: 50px;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
 }
 
 .subcontenedor_main {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
+    padding: 0 20px;
 }
 
 .subcontenedor_main_pic {
@@ -31,7 +39,7 @@ body {
 
 .subcontenedor_main_pic img {
     width: 50%;
-    border-radius: 500px;
+    border-radius: 50%;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
 }
 
@@ -40,6 +48,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
 }
 
 .subcontenedor_main_info h1 {
@@ -48,8 +57,10 @@ body {
 }
 
 .subcontenedor_main_info p {
-    width: 80%;
+    width: 100%;
+    max-width: 600px;
 }
+
 .subcontenedor_main_info ul {
     display: flex;
     list-style-type: none;
@@ -65,16 +76,15 @@ body {
     height: 50px;
     width: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-top: 15px;
 }
 
 .contenedor_social i {
-    color: rgb(255, 255, 255);padding: 5px;
+    color: rgb(255, 255, 255);
+    padding: 5px;
 }
-
 
 /* Proyectos */
 
@@ -120,10 +130,14 @@ body {
     background-color: rgb(194, 194, 194);
     display: grid;
     grid-template-columns: 1fr 1fr;
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
+    padding: 0 20px;
 }
 
 .seccion_contacto form {
-    width: 80%;
+    width: 100%;
     padding-top: 50px;
     padding-bottom: 70px;
 }
@@ -143,14 +157,11 @@ body {
     padding-top: 15px;
 }
 
-
-
-
+/* Media Queries */
 @media screen and (min-width: 800px) and (max-width: 991px) {
     .subcontenedor_main {
         grid-template-columns: 1fr;
         text-align: center;
-       
     }
 
     .subcontenedor_main_info h1 {
@@ -194,12 +205,14 @@ body {
 
     .subcontenedor_main_info p {
         width: 100%;
-        padding-left: 30px;
-        padding-right: 30px;
+        padding-left: 4px;
+        padding-right: 40px;
     }
 
     .subcontenedor_main_info ul {
         justify-content: center;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     .contenedor_social {
@@ -210,7 +223,6 @@ body {
     .contenedor_frames {
         flex-direction: column;
         align-items: center;
-
     }
 
     .esquema_frame {
@@ -224,5 +236,9 @@ body {
     .seccion_contacto form {
         width: 90%;
         padding-top: 20px;
+    }
+    .seccion_contacto img {
+        width: 100%;
+        height: auto;
     }
 }
