--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,14 +1,11 @@
-/* Global Reset */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
+
+ 
+/* Tamaño para desktops */
+@media screen and (min-width: 100%) {}
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
-    overflow-x: hidden;
 }
 
 /* Main */
@@ -18,16 +15,11 @@ body {
     padding-bottom: 50px;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
 }
 
 .subcontenedor_main {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    max-width: 1200px;
-    margin: 0 auto;
-    width: 100%;
-    padding: 0 20px;
 }
 
 .subcontenedor_main_pic {
@@ -39,7 +31,7 @@ body {
 
 .subcontenedor_main_pic img {
     width: 50%;
-    border-radius: 50%;
+    border-radius: 500px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
 }
 
@@ -48,7 +40,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
 }
 
 .subcontenedor_main_info h1 {
@@ -57,10 +48,8 @@ body {
 }
 
 .subcontenedor_main_info p {
-    width: 100%;
-    max-width: 600px;
+    width: 80%;
 }
-
 .subcontenedor_main_info ul {
     display: flex;
     list-style-type: none;
@@ -76,15 +65,16 @@ body {
     height: 50px;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-top: 15px;
 }
 
 .contenedor_social i {
-    color: rgb(255, 255, 255);
-    padding: 5px;
+    color: rgb(255, 255, 255);padding: 5px;
 }
+
 
 /* Proyectos */
 
@@ -130,14 +120,10 @@ body {
     background-color: rgb(194, 194, 194);
     display: grid;
     grid-template-columns: 1fr 1fr;
-    max-width: 1200px;
-    margin: 0 auto;
-    width: 100%;
-    padding: 0 20px;
 }
 
 .seccion_contacto form {
-    width: 100%;
+    width: 80%;
     padding-top: 50px;
     padding-bottom: 70px;
 }
@@ -157,11 +143,14 @@ body {
     padding-top: 15px;
 }
 
-/* Media Queries */
+
+
+
 @media screen and (min-width: 800px) and (max-width: 991px) {
     .subcontenedor_main {
         grid-template-columns: 1fr;
         text-align: center;
+       
     }
 
     .subcontenedor_main_info h1 {
@@ -194,6 +183,11 @@ body {
 
 /* Tamaño para móviles */
 @media screen and (max-width: 799px) {
+
+    body {
+        width: 100%;
+    }
+
     .subcontenedor_main {
         grid-template-columns: 1fr;
         text-align: center;
@@ -223,6 +217,7 @@ body {
     .contenedor_frames {
         flex-direction: column;
         align-items: center;
+
     }
 
     .esquema_frame {
@@ -236,9 +231,5 @@ body {
     .seccion_contacto form {
         width: 90%;
         padding-top: 20px;
-    }
-    .seccion_contacto img {
-        width: 100%;
-        height: auto;
     }
 }
